--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -11,8 +11,15 @@
 		{
 			"matches": ["*://*/*"],
 			"js": ["content_script.js"],
+			"css": ["style.css"],
 			"run_at": "document_end"
 		}
+	],
+	"web_accessible_resources": [
+		"PokemonSolid.ttf",
+		"PokemonSolid.woff2",
+		"pikapika.ttf",
+		"pikapika.woff2"
 	]
 }
 
