--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,18 +1,17 @@
 {
-	"manifest_version": 2,
-	"name": "Pikalator",
-	"version": "0.69",
-	"description": "Pika Pika motherfucker",
-	"icons": {
-		"128": "icon.png"
-		},
-	"content_scripts": 
-	[
-		{
-			"matches": ["*://*/*"],
-			"js": ["content_script.js"],
-			"run_at": "document_end"
+    "manifest_version": 2,
+    "name": "Pikalator",
+    "version": "0.69",
+    "description": "Pika Pika motherfucker",
+    "icons": {
+        "128": "icon.png"
+    },
+    "content_scripts": [
+        {
+            "matches": ["*://*/*"],
+            "js": ["content_script.js"],
+            "run_at": "document_end"
 		}
-	]
+	],
+    "web_accessible_resources": ["PikaPop1.png", "PikaPop2.png", "PikaPop3.png"]
 }
-
