cursor and shit

--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -21,6 +21,9 @@
 		"pikapika.woff2", 
         "PikaPop1.png", 
         "PikaPop2.png", 
-        "PikaPop3.png"
+        "PikaPop3.png",
+        "Pokeball_icon.png",
+        "giphy.gif",
+        "cursor.png"
 	]
 }
